# eden-nanochat

./: .editorconfig  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: test.yml
nanochat_mlx/: common.py  dataloader.py  dataset.py  engine.py  gpt.py  sft.py  tokenizer.py  train.py
scripts/: chat.py  import_flywheel.py  sft.py  tok_train.py  train.py
tests/: test_chatml.py  test_engine.py  test_flywheel.py  test_model.py
